--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -61,7 +61,7 @@
 }
 
 .difficulty {
-    margin: 10px; 
+    margin: 25px; 
     cursor: pointer
 }
 
@@ -73,7 +73,7 @@
     margin: 25px;
 }
 
-.user-score-timer p, .user-score-timer p span {
+.user-score-timer p, .user-score-timer p span, #word-display {
     font-size: 16pt;
 }
 
