--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -69,15 +69,15 @@
     font-size: 14pt; 
 }
 
-.user-score-timer {
+.timer {
     margin: 25px;
 }
 
-.user-score-timer p, .user-score-timer p span, #word-display {
-    font-size: 16pt;
+.timer p, .timer p span, #word-display {
+    font-size: 18pt;
 }
 
-.timer-count, .user-score {
+.timer-count {
     margin: 0 20px;
 }
 
@@ -112,9 +112,9 @@ input[type=text] {
     border: 2px solid rgb(156, 156, 156);
 }
 
-
-#reset-game {
+.user-score {
     display: none;
+    font-size: 14pt;
 }
 
 /*Background Colors*/
