--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -117,6 +117,50 @@ input[type=text] {
     font-size: 14pt;
 }
 
+
+/*Game Over*/
+
+
+.input-user {
+    /*display: none;*/
+ }
+
+ .input-user a {
+    text-decoration: none;
+    font-family: "Oswald", sans-serif;
+    color: #000;
+    cursor: pointer;
+ }
+
+ .input-user a:hover {
+    color: rgb(116, 116, 116);
+ }
+
+.leaderboard {
+    width: 50%;
+    margin: auto;
+}
+
+.leaderboard table {
+    margin: 25px auto;
+
+}
+
+ #table-position {
+    width: 50px;
+    
+ }
+
+
+ #table-username {
+    width: 100px;
+ }
+
+
+ #table-score {
+    width: 75px;
+ }
+
 /*Background Colors*/
 
 header {
@@ -129,4 +173,3 @@ body {
 }
 
 
-/**/
