Added text to alert user to a highscore with emoji party popperand

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -121,6 +121,11 @@ input[type=text] {
     font-family: 'Oswald', sans-serif;
 }
 
+.popper-emoji {
+    height: 35px;
+    width: 35px;
+}
+
 .input-user {
     display: none;
  }
